force-app/main/default/objects/filesconnect__TemplateListConfig__c/filesconnect__TemplateListConfig__c.object-meta.xml
<CustomObject>
    <label>Template List Config</label>
    <nameField>
        <label>Template List Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template List Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>