force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>