force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__OrderBy__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__OrderBy__c</fullName>
    <label>Order By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>