force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__OrderDirection__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__OrderDirection__c</fullName>
    <label>Order Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>