force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__QueryLimit__c</fullName>
    <label>Query Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>