force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__Template__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Template__c</fullName>
    <label>Template</label>
    <referenceTo>filesconnect__Template__c</referenceTo>
    <relationshipLabel>Template List Configs</relationshipLabel>
    <relationshipName>TemplateListConfigs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>