force-app/main/default/objects/filesconnect__TemplateListConfig__c/fields/filesconnect__WhereCondition__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__WhereCondition__c</fullName>
    <label>Where Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>